--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1786,7 +1786,7 @@ confirm {
             }
         }
     }
-     .col-md-3 {
+     .col-md-12 {
             span {
                 width: 110%;
     border-radius: 4px;
